# langtool_rs

./: Cargo.toml  README.md  bind.cpp  langtool.json  langtoolexample.json
src/: check.rs  main.rs  util.rs
