[package]
name = "webing"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
either = { version = "1.13.0", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
itertools = "0.13.0"
reqwest = "0.12.5"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
serde_with = { version = "3.9.0", features = ["json"] }
tokio = { version = "1.39.2", features = ["sync"] }
toml = "0.8.19"
ureq = { version = "2.10.1", features = ["json"] }
